fix position column in nav

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <!-- Begin: Header -->
     <header class="header">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-2">
                     <!-- Begin: Header Logo -->
                     <div class="header-logo">
                         <a href="#">
-                            <img src="./img/logo/Logo Greenchop_White 2.svg" alt="logo green chop">
+                            <img src="./img/logo/Logo Greenchop_White 1.svg" alt="logo green chop">
                         </a>
                     </div>
                     <!-- End: Header Logo -->
