done responsive header -> section product

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <a href="#!">Tin tức</a>
             <a href="#!">Liên hệ</a>
             <a href="#!" class="header-nav_cart">Giỏ hàng</a>
+            <a href="#!" class="search">Tìm kiếm</a>
             <a href="#!" class="cart-icon"
               ><img src="./icons/icon-cart.svg" alt=""
             /></a>
