done responsive header -> section service

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </p>
             </div>
             <div class="hero-img">
-              <img src="./img/hero/green.png" alt="green chop banner">
+              <img src="./img/hero/green.png" alt="green chop banner" />
             </div>
             <div class="hero-img_tablet">
               <img src="./img/hero/img chop.png" alt="" />
@@ -259,7 +259,282 @@
             </div>
           </div>
         </section>
+
+        <section class="new">
+          <div class="new-inner">
+            <div class="new-content">
+              <h2>Tin tức</h2>
+              <p>
+                L nulla facilisis at vero eros et accumsan et iusto odio
+                dignissim qui blandit praesent luptatum zzril delenit augue duis
+                dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,
+                cons ectetuer adipiscing
+              </p>
+            </div>
+            <div class="new-list">
+              <div class="new-item">
+                <div class="new-item_img">
+                  <img src="./img/post/post-01.png" alt="product 01" />
+                </div>
+                <div class="new-item_content">
+                  <div class="new-item_content-date">
+                    <div class="date">
+                      <a href="#!">Lorem ipsum</a>
+                      <div>
+                        <img
+                          src="./icons/icon-calendar.svg"
+                          alt="calender icon"
+                        />
+                        <span>28 - 10- 2021</span>
+                      </div>
+                    </div>
+                    <h4>
+                      Lorem ipsum dolor sit amet, cons in ectetuer adipiscing
+                      elit
+                    </h4>
+                    <p>
+                      Dolor sit amet, cons ectetuer adipiscing elit, sed diam in
+                      on nonummy nibh euismod tincidunt ut laoreet dolore magna
+                      aliquam erat volutpat. Ut wisi enim...
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="new-item">
+                <div class="new-item_img">
+                  <img src="./img/post/post-02.png" alt="product 01" />
+                </div>
+                <div class="new-item_content">
+                  <div class="new-item_content-date">
+                    <div class="date">
+                      <a href="#!">Lorem ipsum</a>
+                      <div>
+                        <img
+                          src="./icons/icon-calendar.svg"
+                          alt="calender icon"
+                        />
+                        <span>28 - 10- 2021</span>
+                      </div>
+                    </div>
+                    <h4>
+                      Lorem ipsum dolor sit amet, cons in ectetuer adipiscing
+                      elit
+                    </h4>
+                    <p>
+                      Dolor sit amet, cons ectetuer adipiscing elit, sed diam in
+                      on nonummy nibh euismod tincidunt ut laoreet dolore magna
+                      aliquam erat volutpat. Ut wisi enim...
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="new-item">
+                <div class="new-item_img">
+                  <img src="./img/post/post-03.png" alt="product 01" />
+                </div>
+                <div class="new-item_content">
+                  <div class="new-item_content-date">
+                    <div class="date">
+                      <a href="#!">Lorem ipsum</a>
+                      <div>
+                        <img
+                          src="./icons/icon-calendar.svg"
+                          alt="calender icon"
+                        />
+                        <span>28 - 10- 2021</span>
+                      </div>
+                    </div>
+                    <h4>
+                      Lorem ipsum dolor sit amet, cons in ectetuer adipiscing
+                      elit
+                    </h4>
+                    <p>
+                      Dolor sit amet, cons ectetuer adipiscing elit, sed diam in
+                      on nonummy nibh euismod tincidunt ut laoreet dolore magna
+                      aliquam erat volutpat. Ut wisi enim...
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a href="#!">
+              <button class="btn-secondary-default">
+                Xem thêm
+                <span><img src="./icons/icon-coolicon.svg" alt="" /></span>
+              </button>
+            </a>
+          </div>
+        </section>
+
+        <section class="protect">
+          <div class="protect-inner">
+            <div class="protect-content">
+              <h2>GreenChop bảo vệ<br> người dùng như thế nào?</h2>
+              <p>
+                Mỗi đôi đũa GreenChop gồm 2 phần thân đũa và đầu đũa. Người dùng
+                có thể dễ dàng tách rời hoặc gắn liền 2 phần này với nhau
+              </p>
+            </div>
+            <div class="protect-list">
+              <div class="protect-item">
+                <div class="protect-item_img">
+                  <img src="./img/quanlity/item-01.jpg" alt="item 01" />
+                </div>
+                <div class="protect-item_text">
+                  <h4>01. Thân trên đũa</h4>
+                  <p>
+                    Làm từ nhựa Melamine, đầy đủ điều kiện chứng nhận An toàn
+                    thực phẩm.
+                  </p>
+                </div>
+              </div>
+              
+              <div class="protect-item">
+                <div class="protect-item_img">
+                  <img src="./img/quanlity/item-02.jpg" alt="item 01" />
+                </div>
+                <div class="protect-item_text">
+                  <h4>02. Đầu đũa</h4>
+                  <p>
+                    Được làm từ gỗ tre và bảo quản trong bọc khử trùng 100%,
+                    không hề có sự xâm nhập của vi khuẩn/vì rus gây hại. Người
+                    dùng là người đầu tiên chạm tay vào đầu đũa sau khi mở bọc.
+                  </p>
+                </div>
+              </div>
+
+              <div class="protect-item">
+                <div class="protect-item_img">
+                  <img src="./img/quanlity/item-03.jpg" alt="item 01" />
+                </div>
+                <div class="protect-item_text">
+                  <h4>03. Khớp Inox 304</h4>
+                  <p>
+                    Khớp Inox 304 để gắn 2 phần đũa với nhau
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="service">
+          <div class="service-inner">
+            <div class="service-list">
+              <div class="service-item">
+                <img src="./img/service/service-01.svg" alt="quanlity">
+                <div class="service-text">
+                  <h4>Chất liệu an toàn</h4>
+                  <p>Phần đầu đũa được làm bằng bằng gỗ tre, đảm bảo cho sức khỏe người dùng</p>
+                </div>
+              </div>
+
+              <div class="service-item">
+                <img src="./img/service/service-02.svg" alt="quanlity">
+                <div class="service-text">
+                  <h4>Vệ sinh và khử khuẩn</h4>
+                  <p>Đầu đũa mới 100% mỗi bữa ăn, không chung đụng đầu đũa với bất kì ai khác. </p>
+                </div>
+              </div>
+
+              <div class="service-item">
+                <img src="./img/service/service-03.svg" alt="quanlity">
+                <div class="service-text">
+                  <h4>Tiện lợi</h4>
+                  <p>Thao tác tháo lắp nhanh gọn và đơn giản </p>
+                </div>
+              </div>
+
+              <div class="service-item">
+                <img src="./img/service/service-04.svg" alt="quanlity">
+                <div class="service-text">
+                  <h4>Tiết kiệm</h3>
+                  <p>Giá thành đầu đũa cạnh tranh và hợp lý. </p>
+                </div>
+              </div>
+
+              <div class="service-item">
+                <img src="./img/service/service-05.svg" alt="quanlity">
+                <div class="service-text">
+                  <h4>Độc quyền</h4>
+                  <p>GreenChop là sản phẩm đũa thay đầu duy nhất trên thị trường Việt Nam hiện tại </p>
+                </div>
+              </div>
+
+              <div class="service-item">
+                <img src="./img/service/service-06.svg" alt="quanlity">
+                <div class="service-text">
+                  <h4>Giao hàng nhanh</h4>
+                  <p>Giao hàng trong 24h
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="cta">
+          <div class="cta-inner">
+            <div class="cta-img">
+              <img src="./img/calltoaction.png" alt="call to action">
+            </div>
+            <form action="" class="cta-form">
+              <h4>Bạn có bất kì thắc mắc nào.<br>
+                Hãy để lại tin nhắn cho chúng tôi nhé!</h4>
+                <input type="text" placeholder="Tên của bạn" class="input-name">
+                <div class="input-row">
+                  <input type="email" placeholder="Email">
+                  <input type="text" placeholder="Số diện thoại">
+                </div>
+                <div class="form-textaria">
+                  <label for="">Nội dung</label>
+                  <textarea name="" id="" ></textarea>
+                </div>
+                <button class="btn-primary-default">Gửi</button>
+            </form>
+          </div>
+        </section>
       </main>
+      <!-- End: Main -->
+
+      <!-- Begin: Footer -->
+      <!-- <footer class="footer">
+        <div class="footer-inner">
+          <div class="footer-content">
+            <div class="footer-item">
+              <img src="./img/logo/Logo Greenchop_White 2.svg" alt="logo">
+              <p>GreenChop là bạn đồng hành
+                của người tiêu dùng</p>
+            </div>
+            <div class="footer-item">
+              <h4>Trang chủ</h4>
+              <ul>
+                <li><a href="#!">Về GreenChop</a></li>
+                <li><a href="#!">Sản phẩm</a></li>
+                <li><a href="#!">Tin tức</a></li>
+              </ul>
+            </div>
+            <div class="footer-item">
+              <h4>Hỗ trợ</h4>
+              <ul>
+                <li><a href="#!">Đặt hàng trực tuyến (8h-22h)</a></li>
+                <li><a href="#!"><span><img src="./icons/icon-alarm.svg" alt=""></span>Thứ 2 - Thứ 6</a></li>
+                <li><a href="#!"><span><img src="./icons/icon-phone.svg" alt=""></span>091 1717 222</a></li>
+              </ul>
+            </div>
+            <div class="footer-item">
+              <h4>Liên hệ</h4>
+              <ul>
+                <li><a href="#!"><span><img src="./icons/icon-mail.svg" alt=""></span>greenchopvn@gmail.com</a></li>
+                <li><a href="#!"><span><img src="./icons/icon-mail.svg" alt=""></span>Greenchop.vn</a></li>
+                <li><a href="#!"><span><img src="./icons/icon-map.svg" alt=""></span>428 Điện Biên Phủ, P11,
+                  Quận 10, TPHCM</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer> -->
+      <!-- End: Footer -->
     </div>
 
     <!-- Script -->
