done form 1199px

--- a/index.html
+++ b/index.html
@@ -484,13 +484,15 @@
                 <input type="text" placeholder="Tên của bạn" class="input-name">
                 <div class="input-row">
                   <input type="email" placeholder="Email">
-                  <input type="text" placeholder="Số diện thoại">
+                  <input type="text" placeholder="Số điện thoại">
                 </div>
                 <div class="form-textaria">
                   <label for="">Nội dung</label>
                   <textarea name="" id="" ></textarea>
                 </div>
-                <button class="btn-primary-default">Gửi</button>
+                <div class="button">
+                  <button class="btn-primary-default">Gửi</button>
+                </div>
             </form>
           </div>
         </section>
