footer screen 1900px

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
       <!-- End: Main -->
 
       <!-- Begin: Footer -->
-      <!-- <footer class="footer">
+      <footer class="footer">
         <div class="footer-inner">
           <div class="footer-content">
             <div class="footer-item">
@@ -520,7 +520,7 @@
               <h4>Hỗ trợ</h4>
               <ul>
                 <li><a href="#!">Đặt hàng trực tuyến (8h-22h)</a></li>
-                <li><a href="#!"><span><img src="./icons/icon-alarm.svg" alt=""></span>Thứ 2 - Thứ 6</a></li>
+                <li><img src="./icons/icon-alarm.svg" alt=""><a href="#!">Thứ 2 - Thứ 6</a></li>
                 <li><a href="#!"><span><img src="./icons/icon-phone.svg" alt=""></span>091 1717 222</a></li>
               </ul>
             </div>
@@ -534,8 +534,35 @@
               </ul>
             </div>
           </div>
+          <div class="footer-social">
+            <div class="footer-img">
+              <img src="./img/footer/var.png" alt="">
+            </div>
+            <div class="social-list">
+              <div class="social-item">
+                <a href="#!">
+                  <img src="./img/footer/youtube.svg" alt="youtube">
+                </a>
+              </div>
+              <div class="social-item">
+                <a href="#!">
+                  <img src="./img/footer/facebook.svg" alt="facebook">
+                </a>
+              </div>
+              <div class="social-item">
+                <a href="#!">
+                  <img src="./img/footer/instagram.svg" alt="instagram">
+                </a>
+              </div>
+              <div class="social-item">
+                <a href="#!">
+                  <img src="./img/footer/twitter.svg" alt="twitter">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
-      </footer> -->
+      </footer>
       <!-- End: Footer -->
     </div>
 
