done responsive header -> footer

--- a/index.html
+++ b/index.html
@@ -541,22 +541,22 @@
             <div class="social-list">
               <div class="social-item">
                 <a href="#!">
-                  <img src="./img/footer/youtube.svg" alt="youtube">
+                  <img src="./img/footer/yt.svg" alt="youtube">
                 </a>
               </div>
               <div class="social-item">
                 <a href="#!">
-                  <img src="./img/footer/facebook.svg" alt="facebook">
+                  <img src="./img/footer/fb.svg" alt="facebook">
                 </a>
               </div>
               <div class="social-item">
                 <a href="#!">
-                  <img src="./img/footer/instagram.svg" alt="instagram">
+                  <img src="./img/footer/ins.svg" alt="instagram">
                 </a>
               </div>
               <div class="social-item">
                 <a href="#!">
-                  <img src="./img/footer/twitter.svg" alt="twitter">
+                  <img src="./img/footer/tw.svg" alt="twitter">
                 </a>
               </div>
             </div>
